syntax = "proto3";
package senseauto.apcloud.app.collectorapp.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/any.proto";

option go_package = "gitlab.senseauto.com/apcloud/library/proto/api/collector-app/v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  host: "datapro-beta.senseauto.com";
  base_path: "/api/collector-app";
  schemes: HTTP;
  security_definitions: {
    security: {
      key: "Bearer";
      value: {
        type: TYPE_API_KEY;
        in: IN_HEADER;
        name: "Authorization";
      }
    }
  }
  security: {
    security_requirement: {
      key: "Bearer"
    }
  }
};

// form采集服务
service FormService {
  // 创建新表
  rpc CreateFormTable(CreateTableRequest) returns (CollectResponse) {
    option (google.api.http) = {
      post: "/noauth/v1/createTable"
      body: "info"
    };
  }

  // 删除新表
  rpc DeleteFormTable(DeleteTableRequest) returns (CollectResponse) {
    option (google.api.http) = {
      delete: "/noauth/v1/deleteTable"
      body: "info"
    };
  }

  // 插入数据
  rpc InsertFormData(InsertDataRequest) returns (CollectResponse) {
    option (google.api.http) = {
      post: "/noauth/v1/insertData"
      body: "info"
    };
  }

  rpc InsertFormDataString(InsertStringDataRequest) returns (CollectResponse) {
    option (google.api.http) = {
      post: "/noauth/v1/insertFormData"
      body: "info"
    };
  }

  // 查看数据
  rpc GetFormData(GetDataRequest) returns (GetDataResponse) {
    option (google.api.http) = {
      get: "/noauth/v1/getData/{table}"
    };
  }

  rpc GetFormDataString(GetDataRequest) returns (GetFormDataResponse) {
    option (google.api.http) = {
      get: "/noauth/v1/getFormData/{table}"
    };
  }

  // 删除数据
  rpc DeleteFormData(DeleteDataRequest) returns (CollectResponse) {
    option (google.api.http) = {
      delete: "/noauth/v1/deleteData/{table}/{id}"
    };
  }

}

message CreateTableRequest {
  message Info {
    string table_name = 1;
    string json_scheme = 2;
  }
  Info  info = 1;
}

message DeleteTableRequest {
  message Info {
    string table_name = 1;
  }
  Info info = 1;
}

message InsertDataRequest {

  message Info {
    string table = 1;
    map<string, google.protobuf.Any> info = 2;
  }
  Info info = 1;
}

message InsertStringDataRequest {
  message Info {
    string table = 1;
    string data = 2;
  }
  Info info = 1;
}

//没传id就 拉所有的
message GetDataRequest {
  string table = 1;
  string ids = 2;
}

message GetDataResponse {
  string code = 1;
  string message = 2;
  map<string, google.protobuf.Any> data = 3;
}

message GetFormDataResponse {
  string code = 1;
  string message = 2;
  string data = 3;
}


message DeleteDataRequest {
  string table = 1;
  uint64 id = 2;
}


// 采集任务执行响应
message CollectResponse {
  string code = 1;
  string message = 2;
}

message ValueMessage {
  oneof value {
    string string_value = 1;
    int32 int32_value = 2;
    int64 int64_value = 3;
    uint64 uint64_value = 4;
    bool bool_value = 5;
    float float_value = 6;
    double double_value = 7;
  }
}